Still need to test timing issue. But so far, seems to time the scheduler well.
Seems to have a thread/timing/race condition issue in the program, for
los.start() is being called ALTHOUGH the scheduler IS ACTIVE.

--- a/MyHue.properties
+++ b/MyHue.properties
@@ -1,3 +1,4 @@
-#Tue Nov 11 01:16:42 PST 2014
+#Wed Nov 12 00:38:35 PST 2014
+lightOffSchedulerIsActive=true
 WhiteListUsername=BQzC0fmj0HZGZsRj
 LastIPAddress=192.168.1.25
